# proshop-backend

./: .dockerignore  .env.sample  .flake8  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
app/app/: settings.py  urls.py
app/core/: admin.py  middlewares.py  models.py  schema.py  serializers.py  types.py
app/core/fixtures/: backup_1715080550.333719.json
app/core/management/commands/: localdbbackup.py  localdbrestore.py  wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_alter_order_delivered_at_alter_order_paid_at.py  0002_alter_order_id_alter_orderitem_id_alter_product_id_and_more.py  0002_alter_product_rating.py  0003_product_image.py
app/store/: mutation.py  query.py  schema.py  types.py  urls.py  views.py
app/store/schema/: mutation.py  query.py
app/user/: mutation.py  query.py  schema.py  types.py  urls.py  views.py
app/user/schema/: mutation.py  query.py
